# Aegis

./: .editorconfig  .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  Vagrantfile  init_data.sql  pyproject.toml
docs/: api-contracts.md  architecture.md  model_db.md  ui-file-map.md
docs/adr/: README.md
provision/: app-vm.sh  db-vm.sh  firewall.sh  history-vm.sh  provider-vm.sh  ui-vm.sh  verify-ui-host.sh
scripts/: typecheck.sh  verify-vagrant.sh
services/backend-service/: .env.example  README.md  pyproject.toml
services/backend-service/src/backend_service/: __init__.py  config.py  exceptions.py  history_client.py  main.py  provider.py  routes.py  schemas.py  service.py
services/backend-service/tests/: conftest.py  test_abuseipdb_provider.py  test_api.py  test_config.py  test_history_client.py  test_internal_contract.py  test_lifecycle.py  test_provider.py  test_service.py  test_startup.py
services/history-service/: .env.example  README.md  pyproject.toml
services/history-service/alembic/: env.py
services/history-service/alembic/versions/: 0001_create_ip_check_history.py  0002_create_blacklist_persistence.py  0003_add_sync_schedule_reason.py  0004_add_blacklist_delivery_metadata.py  0005_add_blacklist_snapshot_change_metrics.py
services/history-service/src/history_service/: __init__.py  backend_client.py  blacklist_ingestion.py  blacklist_policy.py  blacklist_read.py  blacklist_repository.py  blacklist_scheduler.py  blacklist_sync.py  config.py  database.py  exceptions.py  main.py  models.py  provider_client.py  provider_error_contract.py  repository.py  routes.py  schemas.py  security_logging.py  service.py
services/history-service/tests/: conftest.py  test_alembic.py  test_api.py  test_backend_client.py  test_blacklist_api.py  test_blacklist_ingestion.py  test_blacklist_ingestion_api.py  test_blacklist_policy.py  test_blacklist_read.py  test_blacklist_repository.py  test_blacklist_scheduler.py  test_blacklist_sync.py  test_config.py  test_lifecycle.py  test_mariadb_integration.py  test_provider_blacklist_client.py  test_provider_blacklist_contract.py  test_provider_client.py  test_provider_error_contract.py  test_schemas.py  test_security_logging.py  test_service.py  test_startup.py  test_sync_boundaries.py
services/provider-service/: .env.example  README.md  pyproject.toml
services/provider-service/src/provider_service/: __init__.py  blacklist_worker.py  config.py  exceptions.py  history_client.py  main.py  outbox.py  polling_policy.py  provider.py  routes.py  schemas.py  security_logging.py  service.py
services/provider-service/tests/: conftest.py  test_abuseipdb_provider.py  test_api.py  test_blacklist_provider.py  test_blacklist_worker.py  test_config.py  test_history_client.py  test_internal_contract.py  test_lifecycle.py  test_outbox.py  test_polling_policy.py  test_provider.py  test_security_logging.py  test_service.py  test_startup.py
services/ui-service/: .env.example  README.md  pyproject.toml
services/ui-service/src/ui_service/: __init__.py  application_client.py  backend_client.py  config.py  main.py  routes.py  schemas.py  security_logging.py
services/ui-service/src/ui_service/static/: blacklist.css  blacklist.js  style.css
services/ui-service/src/ui_service/templates/: blacklist.html  index.html
services/ui-service/tests/: conftest.py  test_application_client.py  test_backend_client.py  test_blacklist_javascript.py  test_config.py  test_lifecycle.py  test_routes.py  test_security_logging.py  test_startup.py
