[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-backend-service"
version = "0.1.0"
description = "Internal AbuseIPDB proxy for Aegis"
requires-python = ">=3.14"
dependencies = [
  "fastapi",
  "httpx",
  "pydantic-settings",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "httpx2",
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backend_service"]
