[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-history-service"
version = "0.1.0"
description = "Application backend and persistence API for Aegis"
requires-python = ">=3.14"
dependencies = [
  "alembic",
  "fastapi",
  "httpx",
  "pydantic-settings",
  "pymysql",
  "sqlalchemy>=2.0",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "httpx2",
  "mypy",
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/history_service"]
