[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-provider-service"
version = "0.1.0"
description = "Internal AbuseIPDB proxy for Aegis"
requires-python = ">=3.14"
dependencies = [
  "fastapi",
  "httpx",
  "pydantic-settings",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "httpx2",
  "mypy",
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/provider_service"]
