[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-ui-service"
version = "0.1.0"
description = "Server-rendered UI for Aegis"
requires-python = ">=3.14"
dependencies = [
  "fastapi",
  "httpx",
  "jinja2",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ui_service"]
